--- a/front-end/src/components/styles/global.scss
+++ b/front-end/src/components/styles/global.scss
@@ -1,5 +1,5 @@
 /* SASS Variables */
-  $myColor: red;
+  $myColor: #fff;
 
 h1 {
   color: $myColor;
@@ -89,6 +89,25 @@ body, html {
   position: relative;
   margin: 0 3.5rem;
 }
+.lang-selector-test .our-story-header .lang-selection-container .select-arrow.prefix .ui-select.medium {
+  padding-left: 1.375rem;
+  padding-right: 1.375rem;
+  line-height: 1.3em;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.lang-selector-test .our-story-header .lang-selection-container .select-arrow.prefix .ui-select {
+  padding: .5rem 1.375rem;
+}
+.lang-selector-test .our-story-header .lang-selection-container .select-arrow.prefix .ui-select {
+  background: rgba(0,0,0,.4);
+  border: 1px solid #aaa;
+  color: #fff;
+  font-size: .875rem;
+}
+.lang-selection-container .ui-select-wrapper .select-arrow.prefix .ui-select.medium {
+  text-indent: 0;
+}
 .lang-selector-test .our-story-header .our-story-logo {
   margin-right: auto;
 }
@@ -100,10 +119,6 @@ body, html {
 .lang-selector-test .our-story-header .nfLogo .svg-icon-netflix-logo {
   width: 8.375rem;
   height: 2.25rem;
-}
-.lang-selector-test .our-story-header .nfLogo .svg-icon-netflix-logo {
-  width: auto;
-  height: 1.5rem;
   padding-top: 0;
 }
 svg:not(:root) {
@@ -116,11 +131,7 @@ svg:not(:root) {
 }
 .lang-selector-test .our-story-header .lang-selection-container {
   margin-right: 2rem;
-}
-.lang-selector-test .our-story-header .lang-selection-container {
-  display: inline-block;
-  margin: 0 .75rem;
-      margin-right: 0.75rem;
+  margin-top: 0;
 }
 .lang-selection-container {
   margin-top: 20px;
@@ -244,12 +255,6 @@ img {
 }
 .hero-card.vlv .our-story-card-title {
   font-size: 3.125rem;
-}
-.hero-card .our-story-card-title {
-  font-size: 4rem;
-}
-.hero-card .our-story-card-title {
-  font-size: 1.75rem;
 }
 .hero-card h1, .hero-card h2 {
   max-width: 640px;
@@ -439,12 +444,8 @@ button, input, optgroup, select, textarea {
 }
 .email-form-lockup .our-story-cta-container {
   display: inline-block;
-  vertical-align: top;
   text-align: left;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
   -moz-box-flex: 1;
-  -ms-flex: 1 0 auto;
   flex: 1 0 auto;
 }
 .email-form-lockup .nmhp-cta, .email-form-lockup .our-story-cta {
@@ -461,93 +462,29 @@ button, input, optgroup, select, textarea {
   font-size: 1.625rem;
   min-height: 60px;
 }
-.nmhp-cta-extra-large {
-  font-size: 1rem;
-  min-height: 40px;
-}
 .nmhp-cta {
   padding: 0 1em;
   margin: .5em auto;
 }
 .nmhp-cta {
-  display: -webkit-inline-box;
-  display: -webkit-inline-flex;
-  display: -moz-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
   -moz-box-orient: horizontal;
   -moz-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
   -moz-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  margin: .25em auto;
-  padding: 0 1em;
   line-height: initial;
   width: auto;
 }
 .btn {
   position: relative;
-  font-size: 1em;
-  padding: 24.5px 2em;
   min-width: 74px;
-  min-height: 50px;
-  margin: .5em .5em .5em 0;
 }
 .btn-red {
   color: #fff;
   background-color: #e50914;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#e50914),to(#db0510));
-  background-image: -webkit-linear-gradient(top,#e50914,#db0510);
-  background-image: -moz- oldlinear-gradient(top,#e50914,#db0510);
-  background-image: -o-linear-gradient(top,#e50914,#db0510);
   background-image: linear-gradient(to bottom,#e50914,#db0510);
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.45);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.45);
   box-shadow: 0 1px 0 rgba(0,0,0,.45);
-}
-.btn {
-  display: inline-block;
-  text-decoration: none;
-  line-height: 1em;
-  vertical-align: middle;
-  cursor: pointer;
-  font-weight: 400;
-  letter-spacing: .1px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-      border-top-left-radius: 2px;
-      border-bottom-left-radius: 2px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  text-align: center;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 0;
-      border-left-color: currentcolor;
-      border-left-style: none;
-      border-left-width: 0px;
-  position: relative;
-  color: #000;
-  background-color: #e6e6e6;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#e6e6e6),to(#ddd));
-  background-image: -webkit-linear-gradient(top,#e6e6e6,#ddd);
-  background-image: -moz- oldlinear-gradient(top,#e6e6e6,#ddd);
-  background-image: -o-linear-gradient(top,#e6e6e6,#ddd);
-  background-image: linear-gradient(to bottom,#e6e6e6,#ddd);
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.2);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.2);
-  box-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
   -webkit-appearance: button;
@@ -1714,34 +1651,6 @@ button, input, optgroup, select, textarea {
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
 }
-.email-form-lockup .our-story-cta-container {
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 0 auto;
-  -moz-box-flex: 1;
-  -ms-flex: 1 0 auto;
-  flex: 1 0 auto;
-}
-.email-form-lockup .nmhp-cta, .email-form-lockup .our-story-cta {
-  margin: 0 !important;
-  -webkit-border-bottom-left-radius: 0;
-  -moz-border-radius-bottomleft: 0;
-  border-bottom-left-radius: 0;
-  -webkit-border-top-left-radius: 0;
-  -moz-border-radius-topleft: 0;
-  border-top-left-radius: 0;
-  border-left: 1px solid #333;
-}
-.nmhp-cta-extra-large {
-  font-size: 1.625rem;
-  min-height: 60px;
-}
-.nmhp-cta-extra-large {
-  font-size: 1rem;
-  min-height: 40px;
-}
 .nmhp-cta {
   padding: 0 1em;
   margin: .5em auto;
@@ -1768,63 +1677,6 @@ button, input, optgroup, select, textarea {
   padding: 0 1em;
   line-height: initial;
   width: auto;
-}
-.btn {
-  position: relative;
-  font-size: 1em;
-  padding: 24.5px 2em;
-  min-width: 74px;
-  min-height: 50px;
-  margin: .5em .5em .5em 0;
-}
-.btn-red {
-  color: #fff;
-  background-color: #e50914;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#e50914),to(#db0510));
-  background-image: -webkit-linear-gradient(top,#e50914,#db0510);
-  background-image: -moz- oldlinear-gradient(top,#e50914,#db0510);
-  background-image: -o-linear-gradient(top,#e50914,#db0510);
-  background-image: linear-gradient(to bottom,#e50914,#db0510);
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.45);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.45);
-  box-shadow: 0 1px 0 rgba(0,0,0,.45);
-}
-.btn {
-  display: inline-block;
-  text-decoration: none;
-  line-height: 1em;
-  vertical-align: middle;
-  cursor: pointer;
-  font-weight: 400;
-  letter-spacing: .1px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-      border-top-left-radius: 2px;
-      border-bottom-left-radius: 2px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  text-align: center;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: 0;
-      border-left-color: currentcolor;
-      border-left-style: none;
-      border-left-width: 0px;
-  position: relative;
-  color: #000;
-  background-color: #e6e6e6;
-  background-image: -webkit-gradient(linear,left top,left bottom,from(#e6e6e6),to(#ddd));
-  background-image: -webkit-linear-gradient(top,#e6e6e6,#ddd);
-  background-image: -moz- oldlinear-gradient(top,#e6e6e6,#ddd);
-  background-image: -o-linear-gradient(top,#e6e6e6,#ddd);
-  background-image: linear-gradient(to bottom,#e6e6e6,#ddd);
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.2);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,.2);
-  box-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 button, html input[type="button"], input[type="reset"], input[type="submit"] {
   -webkit-appearance: button;
@@ -2305,10 +2157,6 @@ ul.structural > li {
 .ui-select-wrapper .select-arrow.medium::before {
   top: 11px;
   left: 15px;
-}
-.lang-selection-container .ui-select-wrapper .select-arrow.prefix .ui-select.medium {
-  text-indent: 0;
-  padding-right: 26px;
 }
 .ui-select-wrapper .select-arrow.prefix .ui-select.medium {
   padding-left: 50px;
