--- a/front-end/src/components/styles/global.scss
+++ b/front-end/src/components/styles/global.scss
@@ -184,6 +184,7 @@ a {
   right: 0;
   bottom: 0;
   overflow: hidden;
+  background: url('../../images/default_bg.jpg') no-repeat;
 }
 .hero-card.vlv .our-story-card-background .concord-img-wrapper {
   bottom: 0;
